[gd_scene load_steps=2 format=3 uid="uid://bqfpidewtpeg0"]

[ext_resource type="Script" path="res://addons/gdUnit4/src/ui/parts/InspectorTreeMainPanel.gd" id="1"]

[node name="MainPanel" type="VSplitContainer"]
use_parent_material = true
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -924.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 200
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="Panel"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
allow_rmb_select = true
hide_root = true
select_mode = 1

[node name="report" type="PanelContainer" parent="."]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 11
size_flags_vertical = 11

[node name="report_template" type="RichTextLabel" parent="report"]
use_parent_material = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
bbcode_enabled = true
fit_content = true
selection_enabled = true

[node name="ScrollContainer" type="ScrollContainer" parent="report"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 11

[node name="list" type="VBoxContainer" parent="report/ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="contextMenu" type="PopupPanel" parent="."]
size = Vector2i(103, 80)

[node name="items" type="VBoxContainer" parent="contextMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="debug" type="MenuButton" parent="contextMenu/items"]
layout_mode = 2
size_flags_horizontal = 11
size_flags_vertical = 9
keep_pressed_outside = true
text = "Debug Test"
switch_on_hover = true

[node name="run" type="MenuButton" parent="contextMenu/items"]
layout_mode = 2
size_flags_horizontal = 11
size_flags_vertical = 9
keep_pressed_outside = true
text = "Run Test"
switch_on_hover = true

[connection signal="item_activated" from="Panel/Tree" to="." method="_on_Tree_item_activated"]
[connection signal="item_mouse_selected" from="Panel/Tree" to="." method="_on_tree_item_mouse_selected"]
[connection signal="item_selected" from="Panel/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="focus_exited" from="contextMenu" to="." method="_on_contextMenu_focus_exited"]
[connection signal="popup_hide" from="contextMenu" to="." method="_on_contextMenu_popup_hide"]
[connection signal="mouse_exited" from="contextMenu/items" to="." method="_on_items_mouse_exited"]
[connection signal="pressed" from="contextMenu/items/debug" to="." method="_on_run_pressed" binds= [true]]
[connection signal="pressed" from="contextMenu/items/run" to="." method="_on_run_pressed" binds= [false]]
